--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -35,11 +35,21 @@
             {{title}}
           </h2>
         </div>
-        <div class="m-article-card__timestamp">
-          <span>{{date published_at timeago="true"}}</span>
-          <span>&bull;</span>
-          <span>{{reading_time minute=(t "1 min read") minutes=(t "% min read")}}</span>
-        </div>
+        {{#has tag="Activités"}}
+          <div class="m-article-card__timestamp">
+            {{#if custom_excerpt}}
+              <span>{{custom_excerpt}}</span>
+            {{else}}
+              <span>De nouvelles dates bientôt</span>
+            {{/if}}
+            </div>
+          {{else}}
+          <div class="m-article-card__timestamp">
+            <span>{{date published_at timeago="true"}}</span>
+            <span>&bull;</span>
+            <span>{{reading_time minute=(t "1 min read") minutes=(t "% min read")}}</span>
+          </div>
+        {{/has}}
       </a>
     </div>
   </article>
